--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -155,6 +155,10 @@ a {
     }
 }
 
+#playlist {
+    margin-bottom: 60px;
+}
+
 .song {
     @include transition(width .25s ease);
     margin: 80px auto 0;
