--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -77,6 +77,11 @@ a {
             button {
                 background-color: #eee;
                 cursor: default;
+
+                &:active {
+                    border-bottom: 0;
+                    margin-bottom: 0px;
+                }
             }
         }
 
@@ -190,8 +195,7 @@ a {
 
     &.faux {
         .media {
-            background-color: #fff;
-            border: 2px solid #ccc;
+            background-color: #ccc;
             height: 0;
             padding-bottom: 56.25%;
         }
