--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,12 @@
 
 $golden-ratio: (1 + sqrt(5))/2;
 
+$text-color: #242424;
+$link-color: #42b0e8;
+$primary-color: #42E8CD;
+$secondary-color: #E81C3C;
+
+
 .ellipsis {
     white-space: nowrap;
     overflow: hidden;
@@ -15,19 +21,25 @@ $golden-ratio: (1 + sqrt(5))/2;
 }
 
 body {
-    color: #333;
+    color: $text-color;
     font-family: 'dejarip', sans-serif;
     font-size: 16px;
     font-weight: 400;
 }
 
 a {
+    color: $link-color;
     text-decoration: none;
+}
+
+img {
+    max-width: 100%;
 }
 
 .wrap {
     @include pie-clearfix();
     margin: 0 auto;
+    min-width: 800px;
     width: (($golden-ratio - 1) * 100%);
 }
 
@@ -35,6 +47,10 @@ a {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.button {
+    line-height: 40px;
 }
 
 #masthead {
@@ -60,7 +76,7 @@ a {
 
         a {
             display: block;
-            color: #333;
+            color: $text-color;
             padding: 0 10px;
         }
     }
@@ -69,7 +85,7 @@ a {
         float: right;
         padding-right: 66px;
         position: relative;
-        max-width: 500px;
+        max-width: 480px;
         width: 100%;
 
         &.disabled {
@@ -133,7 +149,7 @@ a {
         }
 
         &.unsaved {
-            border-bottom: 1px solid blue;
+            border-bottom: 1px solid $primary-color;
             margin-bottom: -1px;
         }
 
@@ -142,7 +158,7 @@ a {
         }
         
         &:active {
-            border-bottom: 1px solid red;
+            border-bottom: 1px solid $primary-color;
             margin-bottom: -1px;
         }
     }
@@ -160,13 +176,113 @@ a {
     }
 }
 
+#splash {
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    padding: 80px 0 0;
+    width: 100%;
+
+    h2 {
+        line-height: 1.2;
+        font-size: 4em;
+        font-weight: bold;
+        margin: 60px 0 0;
+    }
+
+    form {
+        margin-top: 60px;
+        padding-right: 150px;
+        position: relative;
+        width: 100%;
+
+        button {
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 0 6px 6px 0;
+            color: #ccc;
+            font-size: 1.125em;
+            font-weight: bold;
+            line-height: 48px;
+            outline: none;
+            padding: 0;
+            position: absolute;
+            right: 0;
+            text-align: center;
+            top: 0;
+            width: 150px;
+
+            &:hover {
+                background-color: lighten(#ccc, 35%);
+            }
+
+            &:active,
+            &.clicked {
+                background-color: lighten($primary-color, 35%);
+                border-color: $primary-color;
+                color: $primary-color;
+            }
+        }
+    }
+
+    input {
+        background-color: transparent;
+        border: 1px solid #ccc; 
+        border-right: 0;
+        border-radius: 6px 0 0 6px;
+        font-size: 1.125em;
+        height: 50px;
+        margin: 0; 
+        outline: none;
+        padding: 0 20px;
+        width: 100%;
+
+        &:focus {   
+            border-color: $primary-color;
+        }
+    }
+}
+
+#call-to-action {
+    margin: 0 auto;
+    text-align: center;
+    width: 100% - (($golden-ratio - 1) * 100%);
+
+    section {
+        color: #ccc;
+        font-size: 1.5em;
+        margin-top: 40px;
+
+        a {
+            padding: 0 20px;
+        }
+    }
+}
+
+
+#faux-playlist {
+    margin: 0 auto;
+    padding-top: 60px;
+    width: 100% - (($golden-ratio - 1) * 100%);
+
+    .song {
+        margin-bottom: 60px;
+        min-width: 0;
+        width: 400px;
+    }
+}
+
+
+
+
+
 #playlist {
-    margin-bottom: 60px;
+    padding: 80px 0 0;
 }
 
 .song {
     @include transition(width .25s ease);
-    margin: 80px auto 0;
+    margin: 0 auto 80px;
     min-width: 600px;
     width: 100% - (($golden-ratio - 1) * 100%);
 
@@ -241,4 +357,20 @@ a {
             display: none;
         }
     }
+}
+
+
+.song.ng-enter,
+.song.ng-leave {
+  -webkit-transition:0.5s linear all;
+  transition:0.5s linear all;
+}
+
+.song.ng-enter,
+.song.ng-leave.ng-leave-active {
+  opacity:0;
+}
+.song.ng-leave,
+.song.ng-enter.ng-enter-active {
+  opacity:1;
 }
