--- a/app/views/playlist.html
+++ b/app/views/playlist.html
@@ -1,4 +1,21 @@
-<section id="playlist">
+<header id="masthead" ng-controller="ControlsCtrl">
+	<div class="wrap">
+		<h1><a href="#/">Playste</a></h1>
+		<button ng-click="savePlaylist()" ng-class="{'saved': isSaved(), 'unsaved': !isSaved()}" ng-bind="saveStatus();"></button>
+		<button>Share</button>
+		<section id="controls">
+			<button><i class="fa fa-step-backward"></i></button>
+			<button ng-click="togglePlay()"><i class="fa" ng-class="{'fa-play': playerStatus == '2', 'fa-pause': playerStatus == '1', 'fa-bolt': playerStatus == (false || 0)}"></i></button>
+			<button ng-click="next()"><i class="fa fa-step-forward"></i></button>
+		</section>
+		<form ng-submit="addSong(newSongUrl)" ng-class="{'disabled': addingSong}">
+			<input type="text" ng-model="newSongUrl" ng-disabled="addingSong" placeholder="Paste a URL from Youtube or SoundCloud">
+			<button type="submit">Add</button>
+		</form>
+	</div>
+</header>
+
+<section id="playlist" ng-show="playlist.songs.length > 0">
 
 	<article class="song faux" ng-show="addingSong">
 		<div class="media"></div>
