--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -50,6 +50,8 @@ img {
 }
 
 .button {
+    background-color: transparent;
+    border: 0;
     line-height: 40px;
 }
 
@@ -272,10 +274,6 @@ img {
     }
 }
 
-
-
-
-
 #playlist {
     padding: 80px 0 0;
 }
@@ -284,6 +282,7 @@ img {
     @include transition(width .25s ease);
     margin: 0 auto 80px;
     min-width: 600px;
+    position: relative;
     width: 100% - (($golden-ratio - 1) * 100%);
 
     .media {
@@ -295,6 +294,27 @@ img {
 
     .caption {
         padding: 10px 0;
+    }
+
+    .controls {
+        margin-top: -60px;
+        position: absolute;
+        right: -40px;
+        top: 50%;
+        width: 40px;
+
+        button {
+            background-color: transparent;
+            border: 0;
+            color: #666;
+            line-height: 40px;
+            outline: none;
+            width: 40px;
+
+            &:hover {
+                background-color: #eee;
+            }
+        }
     }
 
     h2 {
