--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -282,8 +282,14 @@ img {
     @include transition(width .25s ease);
     margin: 0 auto 80px;
     min-width: 600px;
+    padding: 0 40px;
     position: relative;
     width: 100% - (($golden-ratio - 1) * 100%);
+
+    &:hover .controls {
+        opacity: 1;
+        right: -41px;
+    }
 
     .media {
         background-color: #000;
@@ -297,9 +303,11 @@ img {
     }
 
     .controls {
+        @include transition(opacity .25s ease, right .25s ease);
         margin-top: -60px;
+        opacity: 0;
         position: absolute;
-        right: -40px;
+        right: -1px;
         top: 50%;
         width: 40px;
 
