--- a/app/views/playlist.html
+++ b/app/views/playlist.html
@@ -17,21 +17,19 @@
 
 <section id="playlist" ng-show="playlist.songs.length > 0">
 
-	<article class="song faux" ng-show="addingSong">
-		<div class="media"></div>
-		<div class="caption">
-			<h2>Loading...</h2>
-		</div>
-	</article>
+	<div class="code">
+		{{ isSaved(); }}
+		{{ saveButtonText }}
+	</div>
 	
 	<article class="song {{ song.source }}" ng-repeat="song in playlist.songs ">
 		<section class="media" ng-click="createPlayer(song, $index, $event.target); scrollView($event.target); $event.stopPropagation();">
-			<img ng-src="{{ song.image }}" alt="{{ song.title }}">
 			<section class="controls">
 				<button type="button" ng-click="shift($index, $index-1); $event.stopPropagation();"><i class="fa fa-caret-up"></i></button>
 				<button type="button" ng-click="remove($index); $event.stopPropagation();"><i class="fa fa-times"></i></button>
 				<button type="button" ng-click="shift($index, $index+1); $event.stopPropagation();"><i class="fa fa-caret-down"></i></button>
 			</section>
+			<img ng-src="{{ song.image }}" alt="{{ song.title }}">
 		</section>
 		<section class="caption">
 			<h2 ng-bind="song.title"></h2>
