--- a/app/views/playlist.html
+++ b/app/views/playlist.html
@@ -1,28 +1,26 @@
-<header id="masthead">
+<header id="masthead" ng-class="{'options-open': isOptionsVisible}">
 	<div class="wrap">
 		<h1><a href="#/">Playste</a></h1>
-		<button ng-click="savePlaylist()" ng-class="{'saved': isSaved(), 'unsaved': !isSaved()}" ng-bind="saveButtonText"></button>
-		<button>Share</button>
-		<section id="controls">
+		<form ng-submit="addSong(newSongUrl)" ng-class="{'disabled': addingSong}">
+			<div class="loading-bar" ng-class="{'load-slow': addingSong == 'started', 'load-fast': addingSong == 'finish'}"></div>
+			<input type="text" ng-model="newSongUrl" ng-disabled="addingSong" placeholder="Paste a URL from Youtube or SoundCloud">
+			<button class="add" type="submit">Add</button>
+		</form>
+		<section class="controls">
 			<button><i class="fa fa-step-backward"></i></button>
-			<button ng-click="togglePlay()"><i class="fa" ng-class="{'fa-play': playerStatus == '2', 'fa-pause': playerStatus == '1', 'fa-bolt': playerStatus == (false || 0)}"></i></button>
+			<button ng-click="togglePlay()"><i class="fa" ng-class="{'fa-circle-o': playerStatus == '3', 'fa-play': playerStatus == '2', 'fa-pause': playerStatus == '1', 'fa-bolt': playerStatus == (false || 0)}"></i></button>
 			<button ng-click="next()"><i class="fa fa-step-forward"></i></button>
 		</section>
-		<form ng-submit="addSong(newSongUrl)" ng-class="{'disabled': addingSong}">
-			<input type="text" ng-model="newSongUrl" ng-disabled="addingSong" placeholder="Paste a URL from Youtube or SoundCloud">
-			<button type="submit">Add</button>
-		</form>
+		<section class="account">
+			<button ng-show="playlist.songs.length > 0" ng-click="savePlaylist()" ng-class="{'saved': isSaved(), 'unsaved': !isSaved()}" ng-bind="saveButtonText"></button>
+			<button ng-click="toggleLoginModal()" class="login">Log In</button>
+		</section>
 	</div>
 </header>
 
-<section id="playlist" ng-show="playlist.songs.length > 0">
-
-	<div class="code">
-		{{ isSaved(); }}
-		{{ saveButtonText }}
-	</div>
+<section id="playlist" ng-show="playlist.songs.length > 0" ng-class="{'options-open': isOptionsVisible}">
 	
-	<article class="song {{ song.source }}" ng-repeat="song in playlist.songs ">
+	<article class="song {{ song.source }}" ng-repeat="song in playlist.songs">
 		<section class="media" ng-click="createPlayer(song, $index, $event.target); scrollView($event.target); $event.stopPropagation();">
 			<section class="controls">
 				<button type="button" ng-click="shift($index, $index-1); $event.stopPropagation();"><i class="fa fa-caret-up"></i></button>
@@ -34,7 +32,26 @@
 		<section class="caption">
 			<h2 ng-bind="song.title"></h2>
 		</section>
-		
 	</article>
 
+	<div class="code">
+		<span>{{ addingSong }}</span>
+	</div>
+
 </section>
+
+<modal show="modalShown">
+  	<form class="login modal-form">
+  		<h3 class="title">Login</h3>
+		<input type="text" placeholder="Username">
+		<input type="text" placeholder="Password">
+		<button>Login</button>		
+	</form>
+	<form class="sign-up modal-form">
+		<h3 class="title">Create an Account</h3>
+		<input type="text" placeholder="Username">
+		<input type="text" placeholder="Email (optional)">
+		<input type="text" placeholder="Password">
+		<button>Create Account</button>		
+	</form>
+</modal>
