--- a/app/views/playlist.html
+++ b/app/views/playlist.html
@@ -41,10 +41,10 @@
 </section>
 
 <modal show="modalShown">
-  	<form class="login modal-form">
+  	<form ng-submit="loginUser" class="login modal-form">
   		<h3 class="title">Login</h3>
-		<input type="text" placeholder="Username">
-		<input type="text" placeholder="Password">
+		<input type="text" placeholder="Username" ng-model="loginUsername">
+		<input type="text" placeholder="Password" ng-model="loginPassword">
 		<button>Login</button>		
 	</form>
 	<form class="sign-up modal-form">
