--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,6 +25,10 @@ $secondary-color: #E81C3C;
     padding: 10px;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 * {
     @include box-sizing(border-box);
 }
@@ -35,6 +39,17 @@ body {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
+}
+
+hr { 
+    color: transparent;
+    background-color: transparent;
+    display: block; 
+    height: 0; 
+    border: 0; 
+    border-top: 1px solid #ccc; 
+    margin: 20px 0; 
+    padding: 0; 
 }
 
 a {
@@ -218,7 +233,31 @@ img {
     }
 
     .account {
+        position: relative;
         float: right;
+    }
+
+    .dropdown {
+        border: 1px solid #ccc;
+        position: absolute;
+        top: 40px;
+        right: 0;
+        width: 200px;
+
+        a {
+            cursor: pointer;
+            line-height: 40px;
+            padding: 0 20px;
+            display: block;
+
+            &:hover {
+                background-color: #eee;
+            }
+
+            &:last-child {
+                border-top: 1px solid #ccc;
+            }
+        }
     }
 
 }
@@ -335,7 +374,6 @@ img {
     }
 }
 
-
 .modal-overlay {
     position: absolute;
     z-index: 9800;
@@ -344,11 +382,11 @@ img {
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: .8;
+    opacity: .5;
 }
 
 .modal-dialog {
-    @include translate(-50%, -50%);
+    @include translate(-50%, -75%);
     border: 1px solid #ccc;
     border-radius: 4px;
     z-index: 9900;
@@ -386,7 +424,7 @@ img {
     width: 500px;
 
     .title {
-        margin: 0 0 10px;
+        margin: 0 0 20px;
     }
 
     input {
@@ -394,7 +432,7 @@ img {
         border: 1px solid #ccc;
         padding: 8px 12px;
         outline: none;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
         width: 100%;
 
         &:focus {
@@ -403,11 +441,11 @@ img {
     }
 
     button {
+        display: block;
         border: 1px solid #ccc;
         background-color: #eee;
         padding: 8px 20px;
         text-align: center;
-        float: right;
         margin: 0;
         outline: none; 
 
@@ -415,6 +453,16 @@ img {
         &:focus {
             border-color: $primary-color;
         } 
+    }
+
+    p {
+        margin: 0;
+        text-align: center;
+
+        a {
+            margin-left: 5px;
+            cursor: pointer;
+        }
     }
 
     &.login {
