--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,1 +1,44 @@
-<p>This is the profile view.</p>
+<header id="masthead" ng-class="{'options-open': isOptionsVisible}">
+	<div class="wrap">
+		<h1><a href="#/">Playste</a></h1>
+		<section class="account">
+			<button ng-show="playlist.songs.length > 0" ng-click="savePlaylist()" ng-class="{'saved': isSaved(), 'unsaved': !isSaved()}" ng-bind="saveButtonText"></button>
+			<button ng-click="toggleModal('login')" ng-show="!isAuthed" class="login">Log In</button>
+			<button ng-show="isAuthed" ng-click="toggleDropdown()" class="account">{{ User.name }} <i class="fa" ng-class="{'fa-caret-down': !isDropdownVisible, 'fa-caret-up': isDropdownVisible}"></i></button>
+			<div class="dropdown" ng-show="isDropdownVisible">
+				<a href="#/profile">Profile</a>
+				<a href="#/help">Help</a>
+				<a ng-click="signOut()">Sign Out</a>
+			</div>
+		</section>
+	</div>
+</header>
+
+<section class="profile">
+
+	<div class="wrap">
+
+		<table class="playlists">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Playlists</th>
+					<th>Created</th>
+					<th>Updated</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="playlist in playlists">
+					<td>{{ $index+1 }}</td>
+					<td><a ng-href="#/{{playlist.hash}}">{{ playlist.hash }}</a></td>
+					<td>{{ playlist.created | date:'medium' }}</td>
+					<td>{{ playlist.updated | date:'medium' }}</td>
+				</tr>
+			</tbody>
+		</table>
+
+	</div>
+	
+	
+
+</section>
