--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -276,7 +276,6 @@ img {
 
     &:hover .controls {
         opacity: 1;
-        right: -41px;
     }
 
     .media {
@@ -292,6 +291,7 @@ img {
 
     .controls {
         @include transition(opacity .25s ease, right .25s ease);
+        background-color: rgba(#fff, .33);
         margin-top: -60px;
         opacity: 0;
         position: absolute;
@@ -302,13 +302,17 @@ img {
         button {
             background-color: transparent;
             border: 0;
-            color: #666;
+            color: #333;
             line-height: 40px;
             outline: none;
             width: 40px;
 
             &:hover {
                 background-color: #eee;
+            }
+
+            &:focus {
+                background-color: $primary-color;
             }
         }
     }
