--- a/app/views/user.html
+++ b/app/views/user.html
@@ -6,7 +6,7 @@
 			<button ng-click="toggleModal('login')" ng-show="!isAuthed" class="login">Log In</button>
 			<button ng-show="isAuthed" ng-click="toggleDropdown()" class="account">{{ User.name }} <i class="fa" ng-class="{'fa-caret-down': !isDropdownVisible, 'fa-caret-up': isDropdownVisible}"></i></button>
 			<div class="dropdown" ng-show="isDropdownVisible">
-				<a href="#/profile">Profile</a>
+				<a ng-href="#/user/{{ User.name }}">Profile</a>
 				<a href="#/help">Help</a>
 				<a ng-click="signOut()">Sign Out</a>
 			</div>
@@ -25,17 +25,28 @@
 					<th>Playlists</th>
 					<th>Created</th>
 					<th>Updated</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="playlist in playlists">
-					<td>{{ $index+1 }}</td>
+					<td>{{ $index + 1 }}</td>
 					<td><a ng-href="#/{{playlist.hash}}">{{ playlist.hash }}</a></td>
 					<td>{{ playlist.created | date:'medium' }}</td>
 					<td>{{ playlist.updated | date:'medium' }}</td>
+					<td>
+						<button ng-click="share(playlist)">Share</button>
+						<button ng-click="delete(playlist)">Delete</button>
+					</td>
 				</tr>
 			</tbody>
 		</table>
+
+		<div class="account">
+			
+			
+
+		</div>
 
 	</div>
 	
