--- a/src/scss/_masthead.scss
+++ b/src/scss/_masthead.scss
@@ -1,5 +1,4 @@
 .masthead {
-    background-color: #fff;
     width: 100%;
     padding: 2rem 0 0;
 
@@ -8,11 +7,16 @@
     }
 
     .logo {
+        color: #999;
         text-transform: uppercase;
         font-weight: 700;
         padding: .75rem 0;
         margin: 0 2rem 0 0;
         letter-spacing: 2px;
+        min-width: 160px;
+        border: $border;
+        // background-color: #ddd;
+        text-align: center;
     }
 
     .form {
@@ -38,21 +42,21 @@
     }
 
     .input {
-        background-color: #fff;
+        background-color: $bg;
         display: block;
         width: 100%;
         border-radius: 0;
         border: 0;
-        border-bottom: $border;
+        border: $border;
         font-family: inherit;
         line-height: inherit;
         font-size: 1rem;
-        padding: .75rem 0;
+        padding: .75rem 1rem;
         z-index: 2;
         position: relative;
 
         &:focus {
-            border-color: blue;
+            border-color: $accent;
             outline: none;
         }
     }
